--- a/index.html
+++ b/index.html
@@ -1,54 +1,39 @@
-<!DOCTYPE html><html lang="en" x-data="{ darkMode: false, showMore: false }" :class="darkMode ? 'dark' : ''">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stephanie | Customer Service Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-  <style>
-    html.dark {
-      --tw-bg-opacity: 1;
-      background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-      color: white;
-    }
-  </style>
 </head>
-<body class="bg-pink-50 dark:bg-gray-900 text-gray-800 dark:text-gray-200 font-sans">
+<body x-data="{ darkMode: false, showMore: false }" :class="darkMode ? 'dark' : ''" class="transition-colors duration-500">
   <header class="bg-white dark:bg-gray-800 shadow p-6 sticky top-0 z-10">
     <div class="max-w-6xl mx-auto flex justify-between items-center">
-      <h1 class="text-xl font-bold text-indigo-600 dark:text-indigo-300">Stephanie</h1>
-      <nav>
-        <ul class="flex gap-6 text-sm">
-          <li><a href="#about" class="hover:text-indigo-600">About</a></li>
-          <li><a href="#projects" class="hover:text-indigo-600">Projects</a></li>
-          <li><a href="#contact" class="hover:text-indigo-600">Contact</a></li>
-          <li>
-            <button @click="darkMode = !darkMode" class="text-xs border px-2 py-1 rounded hover:bg-indigo-100 dark:hover:bg-indigo-700">
-              Toggle {{ darkMode ? 'Light' : 'Dark' }} Mode
-            </button>
-          </li>
-        </ul>
+      <h1 class="text-xl font-bold text-pink-600 dark:text-pink-300">Stephanie</h1>
+      <nav class="flex gap-4 items-center">
+        <a href="#about" class="hover:text-pink-600 dark:hover:text-pink-400">About</a>
+        <a href="#projects" class="hover:text-pink-600 dark:hover:text-pink-400">Projects</a>
+        <a href="#contact" class="hover:text-pink-600 dark:hover:text-pink-400">Contact</a>
+        <button @click="darkMode = !darkMode"
+                class="ml-2 text-xs border px-2 py-1 rounded text-pink-700 border-pink-300 dark:text-pink-100 dark:border-pink-600 hover:bg-pink-50 dark:hover:bg-pink-900">
+          Toggle <span x-text="darkMode ? 'Light' : 'Dark'"></span> Mode
+        </button>
       </nav>
     </div>
-  </header>  <main class="max-w-4xl mx-auto mt-10 px-4">
+  </header>  <main class="max-w-4xl mx-auto mt-10 px-4 bg-pink-50 dark:bg-gray-900 text-gray-800 dark:text-gray-200">
     <section id="about" class="mb-20">
-      <h2 class="text-2xl font-bold text-gray-900 dark:text-gray-100">About Me</h2>
-      <p class="mt-4 text-lg text-gray-700 dark:text-gray-300">
+      <h2 class="text-2xl font-bold">About Me</h2>
+      <p class="mt-4 text-lg">
         I'm Stephanie – a customer service expert who thrives on empathy, communication, and creating genuinely helpful experiences.
       </p>
-      <button @click="showMore = !showMore" class="mt-4 text-indigo-600 underline hover:no-underline">
-        <template x-if="showMore">
-          <span>Show less</span>
-        </template>
-        <template x-if="!showMore">
-          <span>Show more</span>
-        </template>
+      <button @click="showMore = !showMore" class="mt-4 text-pink-600 underline hover:no-underline">
+        <span x-text="showMore ? 'Show less' : 'Show more'"></span>
       </button>
-      <p x-show="showMore" x-transition class="mt-2 text-gray-600 dark:text-gray-400">
+      <p x-show="showMore" x-transition class="mt-2">
         With a background in operations and people-first problem-solving, I bring a unique mix of calm, care, and can-do to every customer experience.
       </p><div class="mt-8">
     <h3 class="text-xl font-semibold mb-2">Fun Facts About Me</h3>
-    <ul class="list-disc ml-6 text-gray-700 dark:text-gray-300">
+    <ul class="list-disc ml-6">
       <li>I’m fluent in meme-speak and empathy 🧠💬</li>
       <li>I once resolved 50+ support tickets in one day with a 100% satisfaction rating 💌</li>
       <li>I always personalise responses — no robots allowed 🤖🚫</li>
@@ -58,26 +43,26 @@
 </section>
 
 <section id="projects" class="mb-20">
-  <h2 class="text-2xl font-bold text-gray-900 dark:text-gray-100 mb-6">Projects</h2>
+  <h2 class="text-2xl font-bold mb-6">Projects</h2>
   <div class="grid gap-6 sm:grid-cols-2">
     <div class="bg-white dark:bg-gray-800 p-4 rounded-xl shadow hover:shadow-lg transition">
       <h3 class="text-lg font-semibold mb-2">Customer Feedback Tracker</h3>
-      <p class="text-sm text-gray-600 dark:text-gray-300">A spreadsheet-based tool I designed to log, categorise, and resolve feedback trends with follow-up scheduling.</p>
+      <p class="text-sm">A spreadsheet-based tool I designed to log, categorise, and resolve feedback trends with follow-up scheduling.</p>
     </div>
     <div class="bg-white dark:bg-gray-800 p-4 rounded-xl shadow hover:shadow-lg transition">
       <h3 class="text-lg font-semibold mb-2">Operations Improvement Plan</h3>
-      <p class="text-sm text-gray-600 dark:text-gray-300">Led a review of return/refund handling and introduced clearer messaging and streamlined SOPs.</p>
+      <p class="text-sm">Led a review of return/refund handling and introduced clearer messaging and streamlined SOPs.</p>
     </div>
   </div>
 </section>
 
 <section id="contact" class="mb-20">
-  <h2 class="text-2xl font-bold text-gray-900 dark:text-gray-100 mb-4">Contact</h2>
+  <h2 class="text-2xl font-bold mb-4">Contact</h2>
   <form class="max-w-md space-y-4">
-    <input type="text" placeholder="Your name" class="w-full border border-gray-300 dark:border-gray-600 p-2 rounded bg-white dark:bg-gray-700 dark:text-white" />
-    <input type="email" placeholder="Your email" class="w-full border border-gray-300 dark:border-gray-600 p-2 rounded bg-white dark:bg-gray-700 dark:text-white" />
-    <textarea placeholder="Your message" class="w-full border border-gray-300 dark:border-gray-600 p-2 rounded h-32 bg-white dark:bg-gray-700 dark:text-white"></textarea>
-    <button type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700">
+    <input type="text" placeholder="Your name" class="w-full border border-pink-300 dark:border-pink-700 p-2 rounded bg-white dark:bg-gray-700 dark:text-white" />
+    <input type="email" placeholder="Your email" class="w-full border border-pink-300 dark:border-pink-700 p-2 rounded bg-white dark:bg-gray-700 dark:text-white" />
+    <textarea placeholder="Your message" class="w-full border border-pink-300 dark:border-pink-700 p-2 rounded h-32 bg-white dark:bg-gray-700 dark:text-white"></textarea>
+    <button type="submit" class="bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700">
       Send Message
     </button>
   </form>
