--- a/index.html
+++ b/index.html
@@ -6,21 +6,17 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
-<body x-data="{ darkMode: false, showMore: false }" :class="darkMode ? 'dark' : ''" class="transition-colors duration-500">
-  <header class="bg-white dark:bg-gray-800 shadow p-6 sticky top-0 z-10">
+<body x-data="{ showMore: false }" class="bg-pink-50 text-gray-800 font-sans transition-colors duration-500">
+  <header class="bg-white shadow p-6 sticky top-0 z-10">
     <div class="max-w-6xl mx-auto flex justify-between items-center">
-      <h1 class="text-xl font-bold text-pink-600 dark:text-pink-300">Stephanie</h1>
+      <h1 class="text-xl font-bold text-pink-600">Stephanie</h1>
       <nav class="flex gap-4 items-center">
-        <a href="#about" class="hover:text-pink-600 dark:hover:text-pink-400">About</a>
-        <a href="#projects" class="hover:text-pink-600 dark:hover:text-pink-400">Projects</a>
-        <a href="#contact" class="hover:text-pink-600 dark:hover:text-pink-400">Contact</a>
-        <button @click="darkMode = !darkMode"
-                class="ml-2 text-xs border px-2 py-1 rounded text-pink-700 border-pink-300 dark:text-pink-100 dark:border-pink-600 hover:bg-pink-50 dark:hover:bg-pink-900">
-          Toggle <span x-text="darkMode ? 'Light' : 'Dark'"></span> Mode
-        </button>
+        <a href="#about" class="hover:text-pink-600">About</a>
+        <a href="#projects" class="hover:text-pink-600">Projects</a>
+        <a href="#contact" class="hover:text-pink-600">Contact</a>
       </nav>
     </div>
-  </header>  <main class="max-w-4xl mx-auto mt-10 px-4 bg-pink-50 dark:bg-gray-900 text-gray-800 dark:text-gray-200">
+  </header>  <main class="max-w-4xl mx-auto mt-10 px-4">
     <section id="about" class="mb-20">
       <h2 class="text-2xl font-bold">About Me</h2>
       <p class="mt-4 text-lg">
@@ -45,11 +41,11 @@
 <section id="projects" class="mb-20">
   <h2 class="text-2xl font-bold mb-6">Projects</h2>
   <div class="grid gap-6 sm:grid-cols-2">
-    <div class="bg-white dark:bg-gray-800 p-4 rounded-xl shadow hover:shadow-lg transition">
+    <div class="bg-white p-4 rounded-xl shadow hover:shadow-lg transition">
       <h3 class="text-lg font-semibold mb-2">Customer Feedback Tracker</h3>
       <p class="text-sm">A spreadsheet-based tool I designed to log, categorise, and resolve feedback trends with follow-up scheduling.</p>
     </div>
-    <div class="bg-white dark:bg-gray-800 p-4 rounded-xl shadow hover:shadow-lg transition">
+    <div class="bg-white p-4 rounded-xl shadow hover:shadow-lg transition">
       <h3 class="text-lg font-semibold mb-2">Operations Improvement Plan</h3>
       <p class="text-sm">Led a review of return/refund handling and introduced clearer messaging and streamlined SOPs.</p>
     </div>
@@ -59,16 +55,16 @@
 <section id="contact" class="mb-20">
   <h2 class="text-2xl font-bold mb-4">Contact</h2>
   <form class="max-w-md space-y-4">
-    <input type="text" placeholder="Your name" class="w-full border border-pink-300 dark:border-pink-700 p-2 rounded bg-white dark:bg-gray-700 dark:text-white" />
-    <input type="email" placeholder="Your email" class="w-full border border-pink-300 dark:border-pink-700 p-2 rounded bg-white dark:bg-gray-700 dark:text-white" />
-    <textarea placeholder="Your message" class="w-full border border-pink-300 dark:border-pink-700 p-2 rounded h-32 bg-white dark:bg-gray-700 dark:text-white"></textarea>
+    <input type="text" placeholder="Your name" class="w-full border border-pink-300 p-2 rounded bg-white" />
+    <input type="email" placeholder="Your email" class="w-full border border-pink-300 p-2 rounded bg-white" />
+    <textarea placeholder="Your message" class="w-full border border-pink-300 p-2 rounded h-32 bg-white"></textarea>
     <button type="submit" class="bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700">
       Send Message
     </button>
   </form>
 </section>
 
-  </main>  <footer class="text-center text-sm text-gray-500 dark:text-gray-400 py-6">
+  </main>  <footer class="text-center text-sm text-gray-500 py-6">
     &copy; 2025 Stephanie. Made with 💜 and Tailwind + Alpine.js.
   </footer>
 </body>
