--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
       <nav class="flex gap-4 items-center">
         <a href="#about" class="hover:text-pink-600">About</a>
         <a href="#projects" class="hover:text-pink-600">Projects</a>
+        <a href="#skills" class="hover:text-pink-600">Skills & Tools</a>
+        <a href="#testimonials" class="hover:text-pink-600">Testimonials</a>
         <a href="#contact" class="hover:text-pink-600">Contact</a>
       </nav>
     </div>
   </header>  <main class="max-w-4xl mx-auto mt-10 px-4">
-    <section id="about" class="mb-20">
-      <h2 class="text-2xl font-bold">About Me</h2>
-      <p class="mt-4 text-lg">
+    
+<section id="about" class="mb-20">
+  <h2 class="text-2xl font-bold">About Me</h2>
+  <div class="mt-4 flex flex-col sm:flex-row gap-6 items-start">
+    <img src="https://avatars.githubusercontent.com/u/583231?v=4" alt="Stephanie's avatar" class="w-32 h-32 rounded-full shadow" />
+    <div>
+      <p class="text-lg">
         I'm Stephanie – a customer service expert who thrives on empathy, communication, and creating genuinely helpful experiences.
       </p>
       <button @click="showMore = !showMore" class="mt-4 text-pink-600 underline hover:no-underline">
@@ -27,7 +33,17 @@
       </button>
       <p x-show="showMore" x-transition class="mt-2">
         With a background in operations and people-first problem-solving, I bring a unique mix of calm, care, and can-do to every customer experience.
-      </p><div class="mt-8">
+      </p>
+      <div class="mt-4">
+        <a href="https://instagram.com/booksandbobaa" target="_blank" class="inline-flex items-center text-pink-600 hover:underline">
+          <svg class="w-5 h-5 mr-1" fill="currentColor" viewBox="0 0 24 24"><path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3zm5 3a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6zm4.5-.5a1 1 0 100 2 1 1 0 000-2z"/></svg>
+          @booksandbobaa
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="mt-8">
     <h3 class="text-xl font-semibold mb-2">Fun Facts About Me</h3>
     <ul class="list-disc ml-6">
       <li>I’m fluent in meme-speak and empathy 🧠💬</li>
@@ -37,6 +53,7 @@
     </ul>
   </div>
 </section>
+
 
 <section id="projects" class="mb-20">
   <h2 class="text-2xl font-bold mb-6">Projects</h2>
@@ -49,6 +66,36 @@
       <h3 class="text-lg font-semibold mb-2">Operations Improvement Plan</h3>
       <p class="text-sm">Led a review of return/refund handling and introduced clearer messaging and streamlined SOPs.</p>
     </div>
+  </div>
+</section>
+
+<section id="skills" class="mb-20">
+  <h2 class="text-2xl font-bold mb-4">Skills & Tools</h2>
+  <div class="grid sm:grid-cols-2 gap-4">
+    <ul class="list-disc ml-6">
+      <li>Zendesk / Freshdesk / Gorgias</li>
+      <li>Shopify / WooCommerce</li>
+      <li>Google Workspace, Excel, Airtable</li>
+    </ul>
+    <ul class="list-disc ml-6">
+      <li>Empathy-first communication</li>
+      <li>Process improvement & SOP design</li>
+      <li>Conflict resolution & de-escalation</li>
+    </ul>
+  </div>
+</section>
+
+<section id="testimonials" class="mb-20">
+  <h2 class="text-2xl font-bold mb-6">Testimonials</h2>
+  <div class="space-y-4">
+    <blockquote class="bg-white p-4 rounded-xl shadow">
+      <p class="italic">"Stephanie always goes the extra mile — we saw customer satisfaction rise within weeks!"</p>
+      <footer class="mt-2 text-sm text-right text-gray-500">— Line Manager, Astley Clarke</footer>
+    </blockquote>
+    <blockquote class="bg-white p-4 rounded-xl shadow">
+      <p class="italic">"Her approach to customer care is genuinely human. She makes people feel heard."</p>
+      <footer class="mt-2 text-sm text-right text-gray-500">— Colleague, Customer Service Team</footer>
+    </blockquote>
   </div>
 </section>
 
