--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
-<body x-data="{ showMore: false }" class="bg-pink-50 text-gray-800 font-sans transition-colors duration-500">
+<body x-data="{ showMore: false }" class="scroll-pt-24 bg-pink-50 text-gray-800 font-sans transition-colors duration-500">
   <header class="bg-white shadow p-6 sticky top-0 z-10">
     <div class="max-w-6xl mx-auto flex justify-between items-center">
       <h1 class="text-xl font-bold text-pink-600">Stephanie</h1>
