--- a/index.html
+++ b/index.html
@@ -1,118 +1,102 @@
 <!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Stephanie | Customer Service Portfolio</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flower-Inspired Mockup</title>
+  <style>
+    :root {
+      --deep-plum: #4A003D;
+      --rich-berry: #72095C;
+      --cornflower-blue: #4A78CC;
+      --lavender-blue: #96A9E1;
+      --minty-green: #6A9D76;
+    }* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: var(--lavender-blue);
+  color: var(--deep-plum);
+  line-height: 1.6;
+}
+
+header {
+  background-color: var(--cornflower-blue);
+  color: white;
+  padding: 1rem 2rem;
+  text-align: center;
+}
+
+.package-card {
+  background-color: white;
+  border-left: 10px solid var(--rich-berry);
+  margin: 2rem auto;
+  padding: 2rem;
+  max-width: 600px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  border-radius: 8px;
+  width: 90%;
+}
+
+.package-card h2 {
+  margin-top: 0;
+  color: var(--deep-plum);
+}
+
+.package-price {
+  color: var(--minty-green);
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.btn {
+  display: inline-block;
+  background-color: var(--rich-berry);
+  color: white;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 4px;
+  text-decoration: none;
+  font-weight: bold;
+  margin-top: 1rem;
+}
+
+.btn:hover {
+  background-color: var(--deep-plum);
+}
+
+@media (max-width: 480px) {
+  header {
+    padding: 1rem;
+  }
+
+  .package-card {
+    padding: 1.25rem;
+  }
+
+  .package-price {
+    font-size: 1.25rem;
+  }
+
+  .btn {
+    width: 100%;
+    text-align: center;
+  }
+}
+
+  </style>
 </head>
-<body x-data="{ showMore: false }" class="scroll-pt-24 bg-pink-50 text-gray-800 font-sans transition-colors duration-500">
-  <header class="bg-white shadow p-6 sticky top-0 z-10">
-    <div class="max-w-6xl mx-auto flex justify-between items-center">
-      <h1 class="text-xl font-bold text-pink-600">Stephanie</h1>
-      <nav class="flex gap-4 items-center">
-        <a href="#about" class="hover:text-pink-600">About</a>
-        <a href="#projects" class="hover:text-pink-600">Projects</a>
-        <a href="#skills" class="hover:text-pink-600">Skills & Tools</a>
-        <a href="#testimonials" class="hover:text-pink-600">Testimonials</a>
-        <a href="#contact" class="hover:text-pink-600">Contact</a>
-      </nav>
-    </div>
-  </header>  <main class="max-w-4xl mx-auto mt-10 px-4">
-    
-<section id="about" class="mb-20">
-  <h2 class="text-2xl font-bold">About Me</h2>
-  <div class="mt-4 flex flex-col sm:flex-row gap-6 items-start">
-    <img src="https://avatars.githubusercontent.com/u/583231?v=4" alt="Stephanie's avatar" class="w-32 h-32 rounded-full shadow" />
-    <div>
-      <p class="text-lg">
-        I'm Stephanie – a customer service expert who thrives on empathy, communication, and creating genuinely helpful experiences.
-      </p>
-      <button @click="showMore = !showMore" class="mt-4 text-pink-600 underline hover:no-underline">
-        <span x-text="showMore ? 'Show less' : 'Show more'"></span>
-      </button>
-      <p x-show="showMore" x-transition class="mt-2">
-        With a background in operations and people-first problem-solving, I bring a unique mix of calm, care, and can-do to every customer experience.
-      </p>
-      <div class="mt-4">
-        <a href="https://instagram.com/booksandbobaa" target="_blank" class="inline-flex items-center text-pink-600 hover:underline">
-          <svg class="w-5 h-5 mr-1" fill="currentColor" viewBox="0 0 24 24"><path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3zm5 3a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6zm4.5-.5a1 1 0 100 2 1 1 0 000-2z"/></svg>
-          @booksandbobaa
-        </a>
-      </div>
-    </div>
+<body>
+  <header>
+    <h1>Bloom Package</h1>
+    <p>Inspired by the colours of nature</p>
+  </header>  <div class="package-card">
+    <h2>Romantic Garden Plan</h2>
+    <p>Create a dreamy outdoor space with florals in stunning purple and blue hues. This plan includes curated seeds, layout guidance, and colour pairings.</p>
+    <div class="package-price">£35.00</div>
+    <a href="#" class="btn">Get Started</a>
   </div>
-
-  <div class="mt-8">
-    <h3 class="text-xl font-semibold mb-2">Fun Facts About Me</h3>
-    <ul class="list-disc ml-6">
-      <li>I’m fluent in meme-speak and empathy 🧠💬</li>
-      <li>I once resolved 50+ support tickets in one day with a 100% satisfaction rating 💌</li>
-      <li>I always personalise responses — no robots allowed 🤖🚫</li>
-      <li>I can identify stationery brands by smell 🖊️✨</li>
-    </ul>
-  </div>
-</section>
-
-
-<section id="projects" class="mb-20">
-  <h2 class="text-2xl font-bold mb-6">Projects</h2>
-  <div class="grid gap-6 sm:grid-cols-2">
-    <div class="bg-white p-4 rounded-xl shadow hover:shadow-lg transition">
-      <h3 class="text-lg font-semibold mb-2">Customer Feedback Tracker</h3>
-      <p class="text-sm">A spreadsheet-based tool I designed to log, categorise, and resolve feedback trends with follow-up scheduling.</p>
-    </div>
-    <div class="bg-white p-4 rounded-xl shadow hover:shadow-lg transition">
-      <h3 class="text-lg font-semibold mb-2">Operations Improvement Plan</h3>
-      <p class="text-sm">Led a review of return/refund handling and introduced clearer messaging and streamlined SOPs.</p>
-    </div>
-  </div>
-</section>
-
-<section id="skills" class="mb-20">
-  <h2 class="text-2xl font-bold mb-4">Skills & Tools</h2>
-  <div class="grid sm:grid-cols-2 gap-4">
-    <ul class="list-disc ml-6">
-      <li>Zendesk / Freshdesk / Gorgias</li>
-      <li>Shopify / WooCommerce</li>
-      <li>Google Workspace, Excel, Airtable</li>
-    </ul>
-    <ul class="list-disc ml-6">
-      <li>Empathy-first communication</li>
-      <li>Process improvement & SOP design</li>
-      <li>Conflict resolution & de-escalation</li>
-    </ul>
-  </div>
-</section>
-
-<section id="testimonials" class="mb-20">
-  <h2 class="text-2xl font-bold mb-6">Testimonials</h2>
-  <div class="space-y-4">
-    <blockquote class="bg-white p-4 rounded-xl shadow">
-      <p class="italic">"Stephanie always goes the extra mile — we saw customer satisfaction rise within weeks!"</p>
-      <footer class="mt-2 text-sm text-right text-gray-500">— Line Manager, Astley Clarke</footer>
-    </blockquote>
-    <blockquote class="bg-white p-4 rounded-xl shadow">
-      <p class="italic">"Her approach to customer care is genuinely human. She makes people feel heard."</p>
-      <footer class="mt-2 text-sm text-right text-gray-500">— Colleague, Customer Service Team</footer>
-    </blockquote>
-  </div>
-</section>
-
-<section id="contact" class="mb-20">
-  <h2 class="text-2xl font-bold mb-4">Contact</h2>
-  <form class="max-w-md space-y-4">
-    <input type="text" placeholder="Your name" class="w-full border border-pink-300 p-2 rounded bg-white" />
-    <input type="email" placeholder="Your email" class="w-full border border-pink-300 p-2 rounded bg-white" />
-    <textarea placeholder="Your message" class="w-full border border-pink-300 p-2 rounded h-32 bg-white"></textarea>
-    <button type="submit" class="bg-pink-600 text-white px-4 py-2 rounded hover:bg-pink-700">
-      Send Message
-    </button>
-  </form>
-</section>
-
-  </main>  <footer class="text-center text-sm text-gray-500 py-6">
-    &copy; 2025 Stephanie. Made with 💜 and Tailwind + Alpine.js.
-  </footer>
 </body>
 </html>
